# forecast-sites

./: .gitignore  README.md  THIRDPARTY.md  pipeline.bat  pyproject.toml
.github/: renovate.json5
.github/actions/extract-node-version/: action.yml
.github/workflows/: coverage.yml  license_check.yml  lint.yml  naming_conventions.yml  renovate.yml  reuse_annotate.yml  third_party_license_file_generation.yml  web_coverage.yml  web_license_check.yml  web_lint.yml  web_third_party_license_file_generator.yml
.reuse/: dep5
check/: check_file_names.py  check_licenses.py  check_naming_conventions.py
input/: input.sqlite
src/: data.json  data_interface.py  entity.py  main.py  test_setup.py
src/energy_carrier/: energy_carrier.py  energy_carrier_factory.py
src/energy_demand/: energy_demand.py  energy_demand_factory.py
src/feedstock_demand/: feedstock_demand.py  feedstock_demand_factory.py
src/industrial_site/: site.py  site_factory.py
src/mesa_wrapper/: map_module.py  mesa_server.py  mesa_simulation.py  site_agent.py  time_schedule.py
src/pipelines/: pipelines.geojson  pipelines.py
src/process/: process.py  process_factory.py  process_factory_jrc.py
src/product/: product.py  product_factory.py
src/production_unit/: production_unit.py  production_unit_factory.py
src/region/: region.py  region_factory.py
src/simulation/: simulation.py  simulation_mode.py
src/steam_demand/: steam_demand.py  steam_demand_factory.py
src/utils/: collection_utils.py  file_utils.py  logging_utils.py  time_utils.py
src/visitor/: shape_file_visitor.py  tabular_result_visitor.py  visitor.py
test/: test_data_interface.py  test_entity.py  test_main.py
test/energy_carrier/: test_energy_carrier.py  test_energy_carrier_factory.py
test/energy_demand/: test_energy_demand.py  test_energy_demand_factory.py
test/industrial_site/: test_site.py  test_site_factory.py
test/mesa_wrapper/: test_mesa_server.py  test_mesa_simulation.py  test_site_agent.py  test_time_schedule.py
test/process/: test_process.py  test_process_factory.py
test/product/: test_product.py  test_product_factory.py
test/production_unit/: test_production_unit.py  test_production_unit_factory.py
test/region/: test_region.py  test_region_factory.py
test/simulation/: test_simulation.py  test_simulation_mode.py
test/test_utils/: assertion.py  isi_mock.py
test/utils/: test_collection_utils.py  test_file_utils.py  test_time_utils.py
test/visitor/: test_shape_file_visitor.py  test_tabular_result_visitor.py  test_visitor.py
web/: THIRDPARTY.md  eslint.config.js  package.json
web/check/: checkLicenses.js
web/css/: visualization.css
web/src/: leafletMap.js
web/test/: leafletMap.test.js
